<resources>
    <string name="app_name">Barbell Buddy</string>

    <!-- action bar titles -->
    <string name="action_start_wear_app">Start Wear</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- info text displayed at the top of set timer view -->
    <string name="textview_set_timer_info"><b>Welcome to Barbell Buddy!</b></string>
    <string name="textview_set_timer_info2">Click the watch icon at the top to launch on your Android Wear watch :)</string>

    <!-- set timer start/stop button -->
    <string name="button_set_timer_start">Start</string>
    <string name="button_set_timer_stop">Stop</string>

    <!-- snippet strings -->
    <string name="unit_seconds">seconds</string>

    <!--
    preferences xml strings
    -->

    <string name="prepare_phase_length_preference_title">Phase Length</string>
    <string name="prepare_phase_length_preference_summary"></string>
    <string name="prepare_phase_length_preference_dialog_title">Select phase length:</string>

    <string name="prepare_phase_background_color_title">Background Color</string>
    <string name="prepare_phase_background_color_summary">Watchface background color</string>
    <string name="prepare_phase_background_color_dialog_title">Select background color:</string>

    <string name="prepare_phase_preferences">Prepare</string>
    <string name="prepare_phase_vibrate_on_title">Vibrate Alert</string>
    <string name="prepare_phase_vibrate_on_summary">Issue vibration for start of phase</string>

    <string name="lift_phase_length_preference_title">Phase Length</string>
    <string name="lift_phase_length_preference_summary"></string>
    <string name="lift_phase_length_preference_dialog_title">Select phase length:</string>

    <string name="lift_phase_background_color_title">Background Color</string>
    <string name="lift_phase_background_color_summary">Watchface background color</string>
    <string name="lift_phase_background_color_dialog_title">Select background color:</string>

    <string name="lift_phase_preferences">Lift</string>
    <string name="lift_phase_vibrate_on_title">Vibrate Alert</string>
    <string name="lift_phase_vibrate_on_summary">Issue vibration for start of phase</string>

    <string name="wait_phase_length_preference_title">Phase Length</string>
    <string name="wait_phase_length_preference_summary"></string>
    <string name="wait_phase_length_preference_dialog_title">Select phase length:</string>

    <string name="wait_phase_background_color_title">Background Color</string>
    <string name="wait_phase_background_color_summary">Watchface background color</string>
    <string name="wait_phase_background_color_dialog_title">Select background color:</string>

    <string name="wait_phase_preferences">Wait</string>
    <string name="wait_phase_vibrate_on_title">Vibrate Alert</string>
    <string name="wait_phase_vibrate_on_summary">Issue vibration for start of phase</string>

    <string name="reset_default_values_preferences">Reset</string>
    <string name="reset_default_values_title">Reset Defaults</string>
    <string name="reset_default_values_summary">Revert all settings to their default values.</string>
    <string name="reset_default_values_dialog_message">Are you sure you want to revert all settings to their default values?</string>

    <!--
    help fragment strings
    -->

    <string name="help_question_1">What is Barbell Buddy?</string>
    <string name="help_answer_1">Barbell Buddy is a set timer app targeting users who already have a workout routine.  Aimed at Android Wear users, it is meant to act as a gentle “start next set” assistant, ensuring you rest the perfect amount of time in between sets!</string>

    <string name="help_question_2">What are the set phases?</string>
    <string name="help_answer_2">Barbell Buddy uses 3 distinct set phases: <b>Prepare</b>, <b>Lift</b>, and <b>Wait</b>.  The Prepare phase is meant to allow the user to get situated with the gym equipment, the Lift phase indicates the workout set is active, and the Wait phase is the rest timer before preparing for the next set.  These phases can be customized in the app Settings.</string>

    <string name="help_question_3">How should I use Barbell Buddy?</string>
    <string name="help_answer_3">On your Android Wear watch you can say: “OK Google, start a workout” to launch Barbell Buddy.  A gentle vibration will alert you when it is time to prepare for your upcoming set.  After each set is finished, tap anywhere on the watch face to reset the timer to the Wait phase.  A double tap will instead reset the timer to the Prepare phase.</string>

    <string name="help_question_4">Are there any features you are working on in future releases?</string>
    <string name="help_answer_4">Yes!  We are currently working on an auto-gym detection feature, which will launch Barbell Buddy on your Android Wear watch when you arrive at your gym.  In the future we also hope to employ an auto-set end detection feature, as well as keep some basic workout stats for you to view after your session.</string>

    <string name="help_question_5">How can I contact you for feedback and suggestions?</string>
    <string name="help_answer_5">We would love to hear your feedback and suggestions! We can be contacted at <a ref="mailto:barbellbuddy@mcraesolutions.com">barbellbuddy@mcraesolutions.com</a>, and will strive to respond personally to each email.  Thanks in advance for reaching out, you\'re awesome <b>:)</b></string>

</resources>
